--- a/Mask_project.ipynb
+++ b/Mask_project.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPiMsPKWHqGmo5IBp91GRd9",
+      "authorship_tag": "ABX9TyMSwd7fBmGkf/YNicy5PACY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5yPIJgiKm5Oo",
-        "outputId": "d7b86821-cc17-43e5-e556-7eb300a1b93b"
+        "outputId": "f7d6fa30-890a-4127-8488-cdf93d059a29"
       },
       "outputs": [
         {
@@ -63,12 +63,78 @@
         "response = requests.get(url)\n",
         "\n",
         "# 將請求回應的內容存成一個字串格式\n",
-        "d = response.text\n",
+        "s = response.text\n",
         "\n",
         "# 將長得像 json 格式的字串解析成字典或列表\n",
-        "data = json.loads(d)\n",
+        "data = json.loads(s)\n",
         "\n",
         "print(data)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 計算各地區藥局數量\n",
+        "med_count = {}\n",
+        "\n",
+        "# 填入欄位名稱\n",
+        "for s in data[\"features\"]:\n",
+        "    county = s[\"properties\"][\"address\"][:3]\n",
+        "    med_count[county] = med_count.get(county, 0) + 1  # 若county在字典中，返回縣市出現的次數再加1，若無則返回0\n",
+        "\n",
+        "print(med_count)"
+      ],
+      "metadata": {
+        "id": "cqgnqbOu7nci",
+        "outputId": "80016b52-7f5e-4f57-a66f-383eabd62147",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'臺北市': 340, '高雄市': 424, '臺中市': 436, '臺南市': 280, '基隆市': 57, '新竹市': 39, '嘉義市': 67, '新北市': 507, '桃園市': 271, '新竹縣': 48, '宜蘭縣': 76, '苗栗縣': 57, '彰化縣': 181, '南投縣': 67, '雲林縣': 131, '嘉義縣': 84, '屏東縣': 140, '澎湖縣': 11, '花蓮縣': 47, '臺東縣': 23, '金門縣': 6, '連江縣': 1}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 計算出每個地區的成人剩餘口罩數量，將結果從大到小排列\n",
+        "\n",
+        "mask_count = {}\n",
+        "\n",
+        "# 填入欄位名稱\n",
+        "for s in data[\"features\"]:\n",
+        "    county = s[\"properties\"][\"address\"][:3]\n",
+        "    mask_count[county] = mask_count.get(county, 0) + s[\"properties\"][\"mask_adult\"]\n",
+        "\n",
+        "# 將結果從大到小排列\n",
+        "mask_count = dict(sorted(mask_count.items(), key=lambda item: item[1], reverse = True))\n",
+        "\n",
+        "print(mask_count)"
+      ],
+      "metadata": {
+        "id": "nBeGY0uG7sGW",
+        "outputId": "f165727b-ae85-4c8d-cf10-882606538af8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'新北市': 677660, '臺中市': 556440, '高雄市': 428940, '臺南市': 408400, '桃園市': 345600, '臺北市': 323660, '彰化縣': 219400, '雲林縣': 199470, '屏東縣': 184250, '苗栗縣': 134180, '嘉義縣': 113180, '嘉義市': 107840, '宜蘭縣': 106900, '南投縣': 91240, '基隆市': 80100, '花蓮縣': 57330, '新竹縣': 53760, '新竹市': 45630, '臺東縣': 28510, '金門縣': 15510, '澎湖縣': 12600, '連江縣': 7930}\n"
+          ]
+        }
       ]
     }
   ]
