--- a/Text_Analysis.ipynb
+++ b/Text_Analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMRORO1P0LkLcvf6ux09WKU",
+      "authorship_tag": "ABX9TyNrOgwNEu8Bj4XSQ1f4AWu7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 7,
       "metadata": {
         "id": "9g2XCDh8LytQ"
       },
@@ -56,17 +56,17 @@
       "metadata": {
         "id": "SeA6A9IqMiWd"
       },
-      "execution_count": 2,
+      "execution_count": 10,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# 安裝 jieba 中文斷詞套件\n",
-        "!pip install jieba\n",
+        "# !pip install jieba\n",
         "\n",
         "# 下載官方字典檔\n",
-        "!wget https://raw.githubusercontent.com/fxsjy/jieba/master/extra_dict/dict.txt.big\n",
+        "# !wget https://raw.githubusercontent.com/fxsjy/jieba/master/extra_dict/dict.txt.big\n",
         "\n",
         "# 載入套件與字典檔\n",
         "import jieba\n",
@@ -88,7 +88,7 @@
       "metadata": {
         "id": "v2Vu9A-9Mtfj"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -99,10 +99,22 @@
         "print(word_count)"
       ],
       "metadata": {
-        "id": "-WLyGaRdMzRc"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-WLyGaRdMzRc",
+        "outputId": "2eb39a6d-ca42-4332-f36f-def6430922f0"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{' ': 145, '，': 129, '的': 47, '、': 31, '。': 24, '「': 23, '」': 23, '是': 19, '也': 16, '人': 15, '\\r': 14, '他': 13, '黃': 12, '法律系': 11, '後': 11, '了': 10, '在': 10, '有': 10, '會': 9, '為': 9, '外': 9, '送': 9, '家暴': 8, '要': 7, '真的': 7, 'PO': 7, '律': 7, '中': 7, '你': 7, '不': 7, '／': 7, '毒品': 7, '警方': 7, '員': 7, '男': 7, '科系': 6, '考': 6, '律師': 6, '階級': 6, '都': 6, '司': 6, '▪': 6, '113': 6, '時': 6, '陳': 6, '工作': 5, '司法官': 5, '原': 5, '複製': 5, '3': 5, '前': 5, '可以': 5, '但': 5, '我': 5, '一': 5, '會考': 5, '看': 5, '國民黨': 5, '主委': 5, '名': 5, '追趕': 5, '將': 5, '（': 5, '）': 5, '清': 5, '德': 5, '畢業': 4, '網友': 4, '家': 4, '裡': 4, '除了': 4, '上榜': 4, '法律': 4, '文': 4, '表示': 4, '從': 4, '考上': 4, '去': 4, '當': 4, '很': 4, '還': 4, '應': 4, '跟': 4, '報導': 4, '李': 4, '未成年': 4, '福': 4, '姓': 4, '當時': 4, 'Foodpanda': 4, '拍': 4, '隨即': 4, '影片': 4, '機車': 4, '賴': 4, '公布': 4, '部長': 4, '大學': 3, '讀': 3, '指出': 3, '應屆': 3, '之': 3, '備考': 3, '與': 3, '以': 3, '之一': 3, '更': 3, '到': 3, '讓': 3, '？': 3, '5': 3, '20': 3, '於': 3, '哪個': 3, '多': 3, '只有': 3, '路': 3, '只是': 3, '並': 3, '不是': 3, '覺得': 3, '做': 3, '其實': 3, '很多': 3, '已經': 3, '比較': 3, '因': 3, '圖': 3, '趨勢': 3, '！': 3, '一次': 3, '大': 3, '分': 3, '彥': 3, '受訪': 3, '當事人': 3, '應該': 3, '保護': 3, '受': 3, '子女': 3, '就': 3, '台': 3, '協助': 3, '掌': 3, '上前': 3, '騎': 3, '抓': 3, '後背': 3, '重心': 3, '不穩': 3, '另': 3, '追': 3, '團': 3, '日': 3, '民進黨': 3, '鄭': 3, '行政院': 3, '對於': 2, '畢業生': 2, '大多': 2, '一位': 2, '：': 2, '錢': 2, '選': 2, '無法': 2, '全職': 2, '2': 2, '年': 2, '以上': 2, '註定': 2, '無緣': 2, '；': 2, '自身': 2, '經歷': 2, '和': 2, '身旁': 2, '案例': 2, '感嘆': 2, '最': 2, '嚴重': 2, '行業': 2, '貼': 2, '發': 2, '布': 2, '自己': 2, '能': 2, '懷疑': 2, '這': 2, '話': 2, '是否': 2, '家族': 2, '分享': 2, '書記官': 2, '其他': 2, '榜上無名': 2, '同學': 2, '成': 2, '則': 2, '沒有': 2, '忍不住': 2, '%': 2, '神': 2, '只要': 2, '那麼': 2, '不用': 2, '看到': 2, '被': 2, '遇到': 2, '快': 2, '曝光': 2, '紛紛': 2, '有人': 2, '建議': 2, '執著': 2, '人生': 2, '一直': 2, '先': 2, '如果': 2, '想': 2, '再': 2, '說': 2, '法務': 2, '一定': 2, '太': 2, '一個': 2, '我們': 2, '意見': 2, '少數': 2, '準備': 2, '本科': 2, '系': 2, '無關': 2, '像是': 2, '公司': 2, '打': 2, '【': 2, '】': 2, '命題': 2, '解析': 2, '關鍵': 2, '最後': 2, '衝刺': 2, '內容': 2, '數位': 2, '秀': 2, '今': 2, '回': 2, '無從': 2, '判斷': 2, '零': 2, '容忍': 2, '及': 2, '社': 2, '單位': 2, '介入': 2, '安全': 2, '立委': 2, '重要': 2, '進一步': 2, '專線': 2, '男子': 2, '涉': 2, '案件': 2, '昨': 2, '第二': 2, '分局': 2, '逮': 2, '狂奔': 2, '刑警': 2, '不斷': 2, '1': 2, '路過': 2, '網': 2, '向': 2, '歹徒': 2, '恐': 2, '-': 2, '朝': 2, '嫌疑人': 2, '一下': 2, '倒地': 2, '翻': 2, '攝': 2, '自': 2, '臉': 2, '書社': 2, 'Ubereats': 2, '甘苦談': 2, '全台': 2, '總統': 2, '人選': 2, '今日': 2, '六位': 2, '財經': 2, '部會首長': 2, '衛': 2, '接棒': 2, '月': 2, '包含': 2, '泰': 2, '院長': 2, '世': 2, '劉': 2, '金': 2, '吳': 2, '往往': 1, '決定': 1, '未來': 1, '職': 1, '涯': 1, '方向': 1, '來說': 1, '選擇': 1, '參加國': 1, '踏入': 1, '司法': 1, '體系': 1, '不過': 1, '卻': 1, '直': 1, '嘆': 1, '有點': 1, '天': 1, '其餘': 1, '分析': 1, '引起': 1, '一陣': 1, '討論': 1, 'Dcard': 1, '發文': 1, '怨嘆': 1, '最近': 1, '十分': 1, '心累': 1, '萌生': 1, '放棄': 1, '念頭': 1, '想起': 1, '曾': 1, '耳聞': 1, '年內': 1, '大部分': 1, '不禁': 1, '句': 1, '屬實': 1, '況': 1, '且說': 1, '這些': 1, '老師': 1, '學歷': 1, '頂尖': 1, '資源': 1, '豐厚': 1, '前輩': 1, '一般': 1, '豈能': 1, '相比': 1, '多年': 1, '國': 1, '皆': 1, '身邊': 1, '交友': 1, '圈': 1, '例': 1, '約': 1, '順利': 1, '認識': 1, '學姐': 1, '朋友': 1, '幾隻': 1, '小貓': 1, '直呼': 1, '其': 1, '80': 1, '普通人': 1, '人家': 1, '閒錢': 1, '給': 1, '耗': 1, '每年': 1, '考試': 1, '喔': 1, '血淋淋': 1, '感慨': 1, '無奈': 1, '經常': 1, '問': 1, '何不': 1, '長久': 1, '下來': 1, '自我': 1, '選錯': 1, '雖然': 1, '教育': 1, '改變': 1, '最快': 1, '方式': 1, '認': 1, '家境': 1, '相對': 1, '優渥': 1, '學生': 1, '各種': 1, '實力': 1, '背景': 1, '碾壓': 1, '最強': 1, '人才': 1, '往上爬': 1, '這條': 1, '辛苦': 1, '窮人家': 1, '看清': 1, '同路人': 1, '留言': 1, '鼓勵': 1, '不要': 1, '同事': 1, '在職': 1, '九年': 1, '毅力': 1, '早晚': 1, '但是': 1, '有時候': 1, '累': 1, '而且': 1, '疲乏': 1, '些': 1, '非': 1, '性質': 1, '幾年': 1, '回來': 1, '認真': 1, '出路': 1, '好': 1, '生活品質': 1, '輸': 1, '把': 1, '綁': 1, '舊有': 1, '上司': 1, '框架': 1, '活': 1, '得': 1, '痛苦': 1, '腳下': 1, '無': 1, '走': 1, '不同': 1, '來回': 1, '算': 1, '努力': 1, '讀書': 1, '回報': 1, '打工': 1, '存錢': 1, '辭職': 1, '一年': 1, '想想': 1, '多少': 1, '比例': 1, '現在': 1, '組': 1, '堆起來': 1, '窮人': 1, '機會': 1, '資': 1, '工': 1, '類': 1, '有錢': 1, '吧': 1, '音樂': 1, '美術': 1, '歷史': 1, '哲學': 1, '中文': 1, '而': 1, '商科': 1, '沒': 1, '只能': 1, '工人': 1, '本來': 1, '出生': 1, '就是': 1, '才': 1, '放大': 1, '這種': 1, '感覺': 1, '文教': 1, '熱': 1, '話題': 1, '社會': 1, '時事': 1, '2024': 1, '大選': 1, '成雙': 1, '蘇丹紅': 1, '風暴': 1, '英文': 1, '模擬題': 1, '試': 1, '身手': 1, '強化': 1, '閱讀': 1, '高分': 1, '數學': 1, '出題': 1, '全': 1, '新': 1, '綱': 1, '已': 1, '刪': 1, '國文': 1, '從頭': 1, '招': 1, '精準': 1, '出擊': 1, '三': 1, '題型': 1, '寫作': 1, '六級': 1, '作文': 1, '範本': 1, '奪': 1, '專題': 1, '原生': 1, '世代': 1, '揭密': 1, '青少年': 1, '邊玩': 1, '邊': 1, '學': 1, '網路': 1, '世界': 1, '周刊': 1, '藍': 1, '營': 1, '政治': 1, '角': 1, '爆發': 1, '醜聞': 1, '文傳': 1, '個人資料': 1, '隱私': 1, '看起來': 1, '處理': 1, '依照': 1, '相關': 1, '法規': 1, '進行': 1, '辦理': 1, '第一': 1, '優先': 1, '國民黨中央': 1, '媒體': 1, '上': 1, '到底': 1, '哪一位': 1, '人士': 1, '女性': 1, '長期': 1, '關注': 1, '政策': 1, '了解': 1, '避免': 1, '家庭': 1, '造成': 1, '傷害': 1, '還給': 1, '空間': 1, '★': 1, '《': 1, '聯合': 1, '新聞網': 1, '》': 1, '關心': 1, '事件': 1, '請': 1, '中黃': 1, '入': 1, '埋伏': 1, '行蹤': 1, '拔腿': 1, '便衣': 1, '見狀': 1, '騎車': 1, '倒': 1, '制伏': 1, '引': 1, '發熱': 1, '議': 1, '傍晚': 1, '6': 1, '點': 1, '太平區': 1, '永豐路': 1, '停車場': 1, '執行': 1, '查緝': 1, '發現': 1, '34': 1, '歲': 1, '配合': 1, '一路': 1, '竄逃': 1, '警員': 1, '緊追': 1, '喝令': 1, '停下來': 1, '所幸': 1, '確認': 1, '辦案': 1, '催': 1, '油門': 1, '加速': 1, '著': 1, '接近': 1, '伸出': 1, '右手': 1, '整個': 1, '哀嚎': 1, '一聲': 1, '向前': 1, '趴倒': 1, '地': 1, '嘴角': 1, '撞擊': 1, '流血': 1, '後方': 1, '近': 1, '50': 1, '公尺': 1, '立刻': 1, '壓制': 1, '身上': 1, '起獲': 1, '第二級': 1, '安非他命': 1, '公克': 1, '裝袋': 1, '手機': 1, '等': 1, '證物': 1, '排除': 1, '販毒': 1, '嫌疑': 1, '持續': 1, '溯源': 1, '釐清': 1, '全案': 1, '依': 1, '罪嫌': 1, '移送': 1, '偵辦': 1, '該': 1, '事後': 1, '文說': 1, '個': 1, '警察': 1, '斷': 1, '氣': 1, '徵用': 1, '要不是': 1, '來': 1, '丟了': 1, '不少': 1, '認同': 1, '讚賞': 1, '留': 1, '言說': 1, '巴': 1, '下去': 1, '瞬間': 1, '好笑': 1, '手': 1, '刀': 1, '門派': 1, '持': 1, '反對': 1, '熱血': 1, '專業': 1, '舉動': 1, '萬一': 1, '嫌犯': 1, '重傷': 1, '或': 1, '癱瘓': 1, '刑責': 1, '出手': 1, '※': 1, '珍愛': 1, '生命': 1, 'NO': 1, '危害': 1, '防制': 1, '諮詢': 1, '0800': 1, '770': 1, '885': 1, '520': 1, '倒數': 1, '新內閣': 1, '陸續': 1, '揭曉': 1, '外傳': 1, '部': 1, '有望': 1, '政委': 1, '僅': 1, '簡單': 1, '毫無': 1, '所': 1, '悉': 1, '當選': 1, '上任': 1, '4': 1, '10': 1, '首波': 1, '名單': 1, '主席': 1, '卓': 1, '榮': 1, '行政院長': 1, '青': 1, '平台': 1, '基金會': 1, '董事長': 1, '麗': 1, '君': 1, '接任': 1, '副': 1, '秘': 1, '書': 1, '長': 1, '龔': 1, '明': 1, '鑫': 1, '發言人': 1, '凱': 1, '12': 1, '內政部長': 1, '芳': 1, '交通部長': 1, '孟': 1, '諺': 1, '銘': 1, '謙': 1, '教育部長': 1, '英': 1, '耀': 1, '文化部長': 1, '遠': 1, '小野': 1, '上午': 1, '國發': 1, '鏡': 1, '金管會': 1, '彭': 1, '隆': 1, '經濟部長': 1, '郭': 1, '智': 1, '輝': 1, '國科會': 1, '誠': 1, '以及': 1, '工程': 1, '幹事長': 1, '思': 1, '瑤': 1, '波': 1, '左右': 1, '階段': 1, '頒': 1, '目前': 1, '新任': 1, '呼聲最高': 1, '者': 1, '恩師': 1, '醫院': 1, '志': 1, '鴻': 1, '邱': 1, '源': 1, '點名': 1, '熱門': 1, '內閣': 1}\n"
+          ]
+        }
+      ]
     }
   ]
 }
